--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/jackhickey/jackhickey.github.io#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "babel-preset-react": "^6.11.1",
+    "babelify": "^7.3.0",
+    "express": "^4.14.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
