--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "jackhickey.github.io",
-  "version": "1.0.0",
-  "description": "A website for cassidy club the band",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jackhickey/jackhickey.github.io.git"
-  },
-  "author": "Jack Hickey",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jackhickey/jackhickey.github.io/issues"
-  },
-  "homepage": "https://github.com/jackhickey/jackhickey.github.io#readme",
-  "dependencies": {
-    "babel-preset-react": "^6.11.1",
-    "babelify": "^7.3.0",
-    "express": "^4.14.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
-  }
+    "name": "jackhickey.github.io",
+    "version": "1.0.0",
+    "description": "A website for cassidy club the band",
+    "main": "server/index.js",
+    "scripts": {
+        "dev": "watchify app/main.js -o bundle.js -p [parcelify -wo bundle.css]"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/jackhickey/jackhickey.github.io.git"
+    },
+    "author": "Jack Hickey",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/jackhickey/jackhickey.github.io/issues"
+    },
+    "homepage": "https://github.com/jackhickey/jackhickey.github.io#readme",
+    "style": "app/css/main.scss",
+    "transforms": ["sass-css-stream"],
+    "dependencies": {
+        "babel-preset-react": "^6.11.1",
+        "babelify": "^7.3.0",
+        "express": "^4.14.0",
+        "react": "^15.3.2",
+        "react-dom": "^15.3.2"
+    },
+    "devDependencies": {
+        "parcelify": "^2.2.0",
+        "sass-css-stream": "^0.1.6",
+        "watchify": "^3.7.0"
+    }
 }
